[tool.poetry]
name = "pythonix"
version = "1.1.6"
description = "Rust and Gleam like functional programming in Python, complete with Results, pipes, and currying"
authors = ["jhok2013 <jhok2013@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/jhok2013/pythonix"
keywords = ["functional", "pipes", "result", "error-as-values", "Rust", "Gleam"]

[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = "^4.11.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
