[tool.poetry]
name = "pythonix"
version = "1.2.0"
description = "Rust and Gleam like functional programming in Python, complete with Results, pipes, and currying, log traililng, and so much more"
authors = ["jhok2013 <jhok2013@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/jhok2013/pythonix"
keywords = ["functional", "pipes", "result", "error-as-values", "Rust", "Gleam", "log", "upgraded dictionary"]

[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = "^4.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
